--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
   },
   "dependencies": {
     "@clerk/clerk-react": "^5.11.0",
+    "@clerk/clerk-sdk-node": "^5.0.48",
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-slot": "^1.1.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "dotenv": "^16.4.5",
+    "express": "^4.21.0",
     "firebase": "^10.14.0",
     "lucide-react": "^0.447.0",
     "react": "^18.3.1",
